<resources>
    <string name="app_name">Notiva</string>

    <array name="recurrence_type_array">
        <item>Forever</item>
        <item>Minute(s)</item>
        <item>Hour(s)</item>
        <item>Day(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </array>

    <!--  Strings for the Main Activity  -->

    <string name="main_activity_title">Reminders</string>
    <string name="am_fab_add_reminder">Add Reminder</string>
    <string name="am_button_delete_all">Delete All Reminders</string>
    <string name="am_tv_no_reminders">No Reminders found\nClick + to add a reminder</string>
    <string name="am_tb_title">REMINDERS</string>
    <string name="am_delete_all_dialog_title">Delete All Reminders</string>
    <string name="am_delete_all_dialog_message">Are you sure you want to \"DELETE ALL REMINDERS\"?</string>
    <string name="am_delete_dialog_confirm">Delete All</string>

    <!--  Strings for the Add Reminder Activity  -->
    <string name="ara_default_display_date">Today-Tue, 29 Jun</string>
    <string name="ara_select_date_description">Select Date</string>
    <string name="ara_hint_reminder_name">Reminder Name</string>
    <string name="ara_switch_repeat_reminder">Repeat Reminder</string>
    <string name="ara_label_every">Every</string>
    <string name="ara_repetition_delay">Repetition delay</string>
    <string name="ara_date_default">Ends on: Tue, 29 Jun</string>
    <string name="ara_time_default">Ends at: 11:52 AM</string>
    <string name="ara_button_reset">RESET</string>
    <string name="ara_button_save">SAVE</string>

    <string name="ara_infinite_recurrence">No end date (infinite)</string>
    <string name="ara_recurrence_summary_default">Repeats as per your settings</string>
    <string name="ara_select_time_description">Select Time</string>
    <string name="ara_reminder_end_time">End Time - %1$d:%2$d</string>
    <string name="ara_reminder_end_date">End Date - %1$d/%2$d/%3$d</string>
    <string name="ara_recurrence_number_required">Please enter a recurrence number</string>


    <!--  Strings for Reminder List Recycler View Layout  -->
    <string name="rir_default_reminder_name">Test Name</string>
    <string name="rir_default_reminder_time">04:30</string>
    <string name="rir_default_recurrence_details">Every 2 Hours</string>
    <string name="rir_default_reminder_date">Fri, 2 July</string>
    <string name="rir_default_occurrence_delay">Triggers in 4 months and 12 days</string>
    <string name="rir_default_end_date_time">12:30, 01–07–2021</string>
    <string name="rir_default_delete_reminder">Delete Reminder</string>


    <!--  Strings for Reminder List Recycler Adapter  -->
    <string name="ria_reminder_time">%1$d:%2$d</string>
    <string name="ria_recurrence_details">Every %1$d %2$s</string>
    <string name="ria_reminder_date">%1$d-%2$d-%3$d</string>
    <string name="ria_occurrence_delay">Triggers in %1$d %2$s and %3$d %4$s</string>
    <string name="ria_end_date_time">%1$d:%2$d, %3$d-%4$d-%5$d</string>
    <string name="ria_delete_dialog_title">Delete Reminder</string>
    <string name="ria_delete_dialog_message">Are you sure you want to delete \"%1$s\"?</string>
    <string name="ria_delete_dialog_confirm">Delete</string>
    <string name="ria_delete_dialog_cancel">Cancel</string>
    <string name="era_title_add_reminder">Add Reminder</string>
    <string name="era_title_edit_reminder">Edit Reminder</string>
    <string name="ara_button_close">Close</string>
    <string name="ticker_text">Trial Ticker Text</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="switch_content_description">Enable/disable the alarm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="rir_default_alarm_name">Alarm Name</string>
    <string name="rir_default_next_occurrence">Next Occurrence: dd/mm/yyyy</string>
    <string name="rir_default_summary">Summary</string>
    <string name="rir_one_time_summary">One-time reminder</string>
    <string name="display_today_prefix">Today-</string>
    <string name="display_tomorrow_prefix">Tomorrow-</string>
    <string name="display_today_singleline">Today, %1$s</string>
    <string name="display_tomorrow_singleline">Tomorrow, %1$s</string>
    <string name="no_end_time">No end time</string>
    <string name="no_end_date">No end date</string>

</resources>