<!-- app/src/main/res/layout/rv_item_reminder.xml -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding">

        <!-- Alarm name row -->
        <TextView
            android:id="@+id/rir_tv_alarm_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rir_default_alarm_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Next occurrence and switch row -->
        <TextView
            android:id="@+id/rir_tv_next_occurrence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rir_default_next_occurrence"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rir_tv_alarm_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rir_sw_active"
            app:layout_constraintBottom_toTopOf="@id/rir_tv_summary"
            app:layout_constraintHorizontal_bias="0" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/rir_sw_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/switch_content_description"
            android:textOff="@string/switch_off"
            android:textOn="@string/switch_on"
            app:layout_constraintTop_toBottomOf="@id/rir_tv_alarm_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rir_tv_summary" />

        <!-- Summary row -->
        <TextView
            android:id="@+id/rir_tv_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rir_default_summary"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/rir_tv_next_occurrence"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>